z-index fixes and minor styling fixes

--- a/source/css/monax.scss
+++ b/source/css/monax.scss
@@ -180,9 +180,9 @@ code {
     border-radius: 2px;
     position: relative;
     bottom: 1px;
-    white-space: nowrap;
+    white-space: pre-wrap;
     // wrap on mobiles
-    @include responsive(breakpoint) { white-space: pre-wrap; }
+    // @include responsive(breakpoint) { white-space: pre-wrap; }
 }
 
 // Custom code blocks
@@ -271,7 +271,7 @@ nav.navbar {
     padding: 0 !important;
     margin: 0 !important;
     background: #ffffff;
-    z-index: 999;
+    z-index: 1020;
     font-size: 1.3em;
     height: $navheight;
     position: fixed;
@@ -302,10 +302,9 @@ nav.navbar {
 
     #nav-logo {
         position: relative;
-        display: box;
         overflow: hidden;
         top: -2px;
-        max-height: 120%;
+        max-height: 24px;
         vertical-align: middle;
     }
 
